# mark

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MIGRATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
agent_gpt/: __init__.py  __main__.py  agents.py  cli.py  main.py  writer.py
mark/: __init__.py  __main__.py  agents.py  cli.py  config.py  llm.py  llm_request.py  llm_response.py  markdown_file.py  scraper.py  setup_browsers.py  writer.py
mark/templates/: default_system_prompt.md
templates/: default_system_prompt.md
tests/: conftest.py  test_cli.py  test_llm.py  test_llm_request.py  test_markdown_file.py  test_scraper.py  test_writer.py
