[project]
name = "mark"
version = "0.10.1"
description = "Mark lets you seamlessly use markdown, images and links to interact with LLMs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/relston/mark"
Issues = "https://github.com/relston/mark/issues"

[tool.poetry]
name = "mark"
version = "0.10.1"
description = "Mark lets you seamlessly use markdown, images and links to interact with LLMs"
authors = ["Ryan Elston <elston.ryan@gmail.com>"]

# Include additional files
include = [
    "templates/default_system_prompt.md"
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "6.0.2"
ipython = "8.32.0"
click = "^8.1.8"
beautifulsoup4 = "^4.12.3"
langchain = "^0.2.16"
langchain-community = "^0.2.15"
pyppeteer = "^2.0.0"
markdownify = "^0.14.1"
llm = "^0.21"
click-default-group = "^1.2.4"

[tool.poetry.scripts]
mark = "mark.cli:mark_cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
respx = "^0.22.0"
httpx = "^0.28.1"
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"