[project]
name = "mark"
version = "0.11.0"
description = "Mark lets you seamlessly use markdown, images and links to interact with LLMs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/relston/mark"
Issues = "https://github.com/relston/mark/issues"

[tool.poetry]
name = "mark"
version = "0.11.0"
description = "Mark lets you seamlessly use markdown, images and links to interact with LLMs"
authors = ["Ryan Elston <elston.ryan@gmail.com>"]

# Data-files that must go into both sdist & wheel:
include = [
    { path = "mark/templates/*.md", format = "wheel" },
    { path = "mark/templates/*.md", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "6.0.2"
ipython = "8.32.0"
click = "^8.1.8"
crawl4ai = "^0.7.8"
llm = "^0.25"
click-default-group = "^1.2.4"

[tool.poetry.scripts]
mark = "mark.cli:mark_cli"
mark-setup-browsers = "mark.setup_browsers:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
respx = "^0.22.0"
httpx = "^0.28.1"
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
